assertj, checkstyle and intellij